--- a/customGeometry.html
+++ b/customGeometry.html
@@ -27,7 +27,7 @@ const stripeMaterial = new Cesium.StripeMaterialProperty({
   oddColor: Cesium.Color.BLUE.withAlpha(0.5),
   repeat: 5.0,
 });
-
+const f = () => {
 entities.add({
   rectangle: {
     coordinates: Cesium.Rectangle.fromDegrees(-92.0, 20.0, -86.0, 27.0),
@@ -38,7 +38,9 @@ entities.add({
     material: stripeMaterial,
   },
 });
+}
 
+const f1 = () => {
 entities.add({
   polygon: {
     hierarchy: new Cesium.PolygonHierarchy(
@@ -61,7 +63,9 @@ entities.add({
     material: stripeMaterial,
   },
 });
+}
 
+const f2 = () => {
 entities.add({
   position: Cesium.Cartesian3.fromDegrees(-80.0, 25.0),
   ellipse: {
@@ -75,7 +79,9 @@ entities.add({
     material: stripeMaterial,
   },
 });
+}
 
+const f3 = () => {
 entities.add({
   position: Cesium.Cartesian3.fromDegrees(-72.0, 25.0),
   ellipse: {
@@ -89,7 +95,9 @@ entities.add({
     material: stripeMaterial,
   },
 });
+}
 
+const f4 = () => {
 entities.add({
   rectangle: {
     coordinates: Cesium.Rectangle.fromDegrees(
@@ -106,7 +114,9 @@ entities.add({
     material: Cesium.Color.fromRandom({ alpha: 1.0 }),
   },
 });
+}
 
+const f5 = () => {
 entities.add({
   position: Cesium.Cartesian3.fromDegrees(-117.0, 35.0),
   ellipse: {
@@ -121,7 +131,9 @@ entities.add({
     material: Cesium.Color.fromRandom({ alpha: 1.0 }),
   },
 });
+}
 
+const f6 = () => {
 entities.add({
   polygon: {
     hierarchy: new Cesium.PolygonHierarchy(
@@ -144,7 +156,9 @@ entities.add({
     material: Cesium.Color.fromRandom({ alpha: 1.0 }),
   },
 });
+}
 
+const f7 = () => {
 entities.add({
   position: Cesium.Cartesian3.fromDegrees(-70.0, 45.0, 100000.0),
   cylinder: {
@@ -169,7 +183,9 @@ entities.add({
     material: Cesium.Color.fromRandom({ alpha: 1.0 }),
   },
 });
+}
 
+const f8 = () => {
 for (i = 0; i < 5; ++i) {
   height = 100000.0 + 200000.0 * i;
   entities.add({
@@ -205,7 +221,8 @@ for (i = 0; i < 5; ++i) {
     },
   });
 }
-
+}
+const f9 = () => {
 entities.add({
   wall: {
     positions: Cesium.Cartesian3.fromDegreesArray([
@@ -224,14 +241,18 @@ entities.add({
     material: Cesium.Color.fromRandom({ alpha: 0.7 }),
   },
 });
+}
 
+const f10 = () => {
 entities.add({
   rectangle: {
     coordinates: Cesium.Rectangle.fromDegrees(-92.0, 30.0, -85.0, 40.0),
     material: stripeMaterial,
   },
 });
+}
 
+const f11 = () => {
 entities.add({
   polygon: {
     hierarchy: {
@@ -291,7 +312,9 @@ entities.add({
     material: stripeMaterial,
   },
 });
+}
 
+const f12 = () => {
 entities.add({
   position: Cesium.Cartesian3.fromDegrees(-80.0, 35.0),
   ellipse: {
@@ -311,7 +334,9 @@ entities.add({
     material: stripeMaterial,
   },
 });
+}
 
+const f13 = () => {
 entities.add({
   rectangle: {
     coordinates: Cesium.Rectangle.fromDegrees(
@@ -338,7 +363,9 @@ entities.add({
     material: Cesium.Color.fromRandom({ alpha: 1.0 }),
   },
 });
+}
 
+const f14 = () => {
 entities.add({
   polygon: {
     hierarchy: new Cesium.PolygonHierarchy(
@@ -359,7 +386,7 @@ entities.add({
     material: Cesium.Color.fromRandom({ alpha: 1.0 }),
   },
 });
-
+const f15 = () => {
 entities.add({
   position: Cesium.Cartesian3.fromDegrees(-70.0, 40.0, 200000.0),
   cylinder: {
@@ -381,7 +408,9 @@ entities.add({
     material: Cesium.Color.fromRandom({ alpha: 1.0 }),
   },
 });
-
+}
+}
+const f16 = () => {
 for (i = 0; i < 5; ++i) {
   height = 200000.0 * i;
 
@@ -408,7 +437,9 @@ for (i = 0; i < 5; ++i) {
     },
   });
 }
+}
 
+const f17 = () => {
 for (i = 0; i < 5; ++i) {
   height = 100000.0 + 200000.0 * i;
   entities.add({
@@ -435,7 +466,8 @@ for (i = 0; i < 5; ++i) {
     },
   });
 }
-
+}
+const f18 = () => {
 positions = [];
 for (i = 0; i < 40; ++i) {
   positions.push(Cesium.Cartesian3.fromDegrees(-100.0 + i, 15.0));
@@ -451,7 +483,9 @@ entities.add({
     }),
   },
 });
+}
 
+const f19 = () => {
 positions = [];
 for (i = 0; i < 40; ++i) {
   positions.push(Cesium.Cartesian3.fromDegrees(-100.0 + i, 9.0));
@@ -481,7 +515,9 @@ entities.add({
     }),
   },
 });
+}
 
+const f20 = () => {
 entities.add({
   corridor: {
     positions: Cesium.Cartesian3.fromDegreesArray([
@@ -513,7 +549,8 @@ entities.add({
     material: Cesium.Color.fromRandom({ alpha: 0.7 }),
   },
 });
-
+}
+const f21 = () => {
 entities.add({
   corridor: {
     positions: Cesium.Cartesian3.fromDegreesArray([
@@ -546,7 +583,8 @@ function starPositions(arms, rOuter, rInner) {
   }
   return pos;
 }
-
+}
+const f22 = () => {
 entities.add({
   polylineVolume: {
     positions: Cesium.Cartesian3.fromDegreesArrayHeights([
@@ -611,6 +649,7 @@ entities.add({
     material: Cesium.Color.WHITE,
   },
 });
+}
 
 viewer.zoomTo(viewer.entities);
   </script>
